...
      ZStack {
        Color.appBackground
          .ignoresSafeArea()
        
        ScrollView {
          FundsContentView(
            title: "Receive Funds",
            walletAddress: wallet.address,
            buttonTitle: "Done",
            buttonAction: { dismiss() },
            onCopyAddress: copyAddress
          )
        }
...
